# shared-schemas-test-rv

./: .gitignore  README.md
.github/workflows/: shared-schemas-lint.yml  shared-schemas-version.yml
schemas/: __init__.py  comment.py  concept.py  confidence.py  group.py  hypothesis.py  link.py  notification.py  pilot.py  stakeholder.py  team.py  version.py
schemas/evidence/: evidence.py
schemas/evidence/metadata/: metadata.py
schemas/taxonomies/: decision_types.py
shared-schemas/: CHANGELOG.md  pyproject.toml
shared-schemas/schemas/: assumption.py  base_model.py  boards.py  classification.py  feature.py  feeds.py  history.py  image.py  next_step.py  poc.py  relationship.py  score.py  signal.py  summaries.py  user.py
shared-schemas/schemas/evidence/: __init__.py  enrichments.py
shared-schemas/schemas/evidence/metadata/: __init__.py  arxiv_metadata.py  feedly_metadata.py  openalex_metadata.py
shared-schemas/schemas/taxonomies/: block_types.py  priorities.py  stages.py  statuses.py
tests/: test_signal.py
